--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ body {
 }
 .nav-logo {
   background: #22f596;
-  /*position: fixed;*/
 }
 .col-2 {
   flex-basis: 30%;
@@ -109,7 +108,7 @@ body {
   margin: 0 15px;
 }
 .col-3 p span {
-  font-size: 18px;
+  font-size: 1.125rem;
   color: #000;
   text-align: center;
 }
@@ -213,4 +212,17 @@ body {
   font-size: 12px;
   color: #fff;
   margin-bottom: -20px;
+}
+
+
+/*media query for screen less than 800px*/
+
+
+@media only screen and (max-width: 900px){
+  #feature{
+    display: none;
+  }
+  #footer .col-4,#footer .col-5{
+    display: none;
+  }
 }
